# syn

./: .gitignore  CHOICEBUTTON_REFACTORING.md  CHOICE_BUTTON_IMPLEMENTATION_RECIPE.md  EVENTCARD_REFACTORING.md  FLOATING_CANVAS_QUICK_REFERENCE.md  GAMESCREEN_REFACTORING.md  Makefile  PHASE_1_IMPLEMENTATION_SUMMARY.md  README.md  ROLE_ASSIGNMENT_IMPLEMENTATION_CHECKLIST.md  UI_REFACTORING_COMPLETE.md  build_rust.sh  build_storylets.sh
flutter/: README.md  analysis_options.yaml  pubspec.yaml
flutter/integration_test/: app_test.dart
flutter/lib/: character_creation_component.dart  detailed_stat_component.dart  game_screen_component.dart  main.dart  main_menu_component.dart  relationship_network_component.dart  settings_screen_component.dart  splash_screen_component.dart  syn_game.dart  ui_effect_layer.dart
flutter/lib/bridge/: README.md  USAGE.md  frb_generated.dart  frb_generated.web.dart  game_backend.dart
flutter/lib/components/: character_creation_component.dart  character_info_component.dart  choice_button_component.dart  end_of_life_component.dart  event_card_component.dart  game_screen_component.dart  inventory_screen_component.dart  main_gameplay_hub_component.dart  main_menu_component.dart  memory_journal_component.dart  particle_system_component.dart  quick_menu_bar_component.dart  relationship_network_component.dart  relationship_panel_component.dart  save_load_component.dart  settings_screen_component.dart  splash_screen_component.dart  stat_panel_component.dart  ui_effect_layer.dart  world_map_component.dart
flutter/lib/dev_tools/: inspectable_mixin.dart  inspector_panel.dart  quake_console.dart
flutter/lib/game/: game_world.dart
flutter/lib/models/: game_phase.dart  game_state.dart  life_stage_profile.dart
flutter/lib/overlays/: confirmation_dialog_overlay.dart  debug_console_overlay.dart  loading_screen_overlay.dart  pause_menu_overlay.dart  save_load_overlay.dart  (+4 more)
flutter/test/: widget_test.dart
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/syn_api/: Cargo.toml
rust/syn_api/data/: hot.redb  world.duckdb
rust/syn_api/src/: api.rs  frb_generated.rs  lib.rs  library_loader.rs
rust/syn_api/tests/: api_relationships.rs  director_api.rs  life_stage_api.rs  new_game_age_test.rs
rust/syn_content/: Cargo.toml
rust/syn_content/src/: lib.rs  schemas.rs  storylet.rs
rust/syn_content/tests/: relationship_prereqs_schema.rs  storylet_outcome_relationships.rs  storylet_outcome_stats.rs
rust/syn_core/: Cargo.toml
rust/syn_core/benches/: core_benchmarks.rs
rust/syn_core/src/: allocator.rs  character_gen.rs  collections.rs  digital_legacy.rs  district.rs  district_pressure.rs  errors.rs  failure_recovery.rs  gossip.rs  gossip_pressure.rs  intern.rs  lib.rs  life_stage.rs  lifepath.rs  narrative_heat.rs  npc.rs  npc_actions.rs  npc_behavior.rs  persistence.rs  population.rs  relationship_milestones.rs  relationship_model.rs  relationship_pressure.rs  relationships.rs  rng.rs  skills.rs  snapshot.rs  stats.rs  time.rs  types.rs  world_flags.rs
rust/syn_core/tests/: game_time_day_hour.rs  life_stage.rs  narrative_heat.rs  new_relationship_model.rs  npc_actions.rs  npc_behavior.rs  npc_core.rs  persistence_roundtrip.rs  relationship_milestones.rs  relationship_pressure.rs  relationships.rs  stats.rs  time_and_schedule.rs
rust/syn_director/: Cargo.toml  build.rs
rust/syn_director/src/: api.rs  compiled_director.rs  config.rs  eligibility.rs  event_director.rs  lib.rs  pacing.rs  persistence.rs  pipeline.rs  pressure.rs  queue.rs  role_assignment.rs  scoring.rs  state.rs  storylet_library.rs  storylet_loader.rs  storylet_outcome.rs  storylet_roles.rs  storylet_source.rs  tag_bitset.rs
rust/syn_director/tests/: cooldown_actor_tests.rs  determinism_tests.rs  director_tick_integration.rs  life_stage_storylet_selection.rs  milestone_integration.rs  narrative_heat_selection.rs  npc_actor_resolution.rs  persistence_integration.rs  pressure_crisis_tests.rs  pressure_priority_selection.rs  queue_overflow_tests.rs  relationship_deltas.rs  relationship_deltas_apply.rs  relationship_prereqs.rs  relationship_pressure_events.rs  step_api_integration.rs  storylet_source_integration.rs
rust/syn_memory/: Cargo.toml
rust/syn_memory/src/: lib.rs
rust/syn_memory/tests/: journal_archival.rs  memory_pair_query.rs  memory_relationship_deltas.rs  npc_behavior_memory.rs  stat_deltas.rs  tag_counts.rs
rust/syn_query/: Cargo.toml
rust/syn_query/src/: lib.rs
rust/syn_sim/: Cargo.toml
rust/syn_sim/src/: lib.rs  npc_registry.rs  post_life.rs  relationship_drift.rs
rust/syn_sim/src/systems/: mod.rs  npc_updates.rs  tiers.rs
rust/syn_sim/tests/: life_stage_integration.rs  narrative_heat_integration.rs  npc_action_execution.rs  npc_behavior_evaluation.rs  npc_registry.rs  relationship_drift_and_utility.rs  sim_tick_world.rs  simulation_integration.rs  unified_stats.rs  world_sim_state.rs
rust/syn_storage/: Cargo.toml
rust/syn_storage/src/: hybrid_store.rs  lib.rs  storage_error.rs
rust/syn_storage/src/cold/: duckdb_cold_store.rs  mod.rs
rust/syn_storage/src/hot/: mod.rs  redb_hot_store.rs
rust/syn_storage/src/models/: mod.rs  npc.rs
rust/syn_storylets/: Cargo.toml
rust/syn_storylets/examples/: mmap_usage.rs
rust/syn_storylets/src/: binary.rs  compiler.rs  errors.rs  lib.rs  library.rs  mapped.rs  validation.rs
rust/syn_storylets/tests/: integration_tests.rs
rust/tests/: storylet_source_integration.rs
storylets/: district_crime_wave.json  district_economic_crash.json  gossip_betrayal_discovery.json  gossip_scandal_confrontation.json  gossip_social_exclusion.json  pressure_affection_surge.json  pressure_resentment_boil.json  pressure_romance_spark.json  pressure_trust_breakdown.json  relationship_high_trust_confession.json  relationship_rival_confrontation.json  relationship_romantic_confession.json  relationship_stranger_introduction.json  sample_slice_of_life.json  trait_ambitious_opportunity.json  trait_high_empathy_help.json  trait_impulsive_risk.json  trait_low_stability_outburst.json
tests/e2e/: storylet_source_integration.rs
(+192 files in other folders)
