[package]
name = "syn_api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
syn_core = { path = "../syn_core" }
syn_sim = { path = "../syn_sim" }
syn_query = { path = "../syn_query" }
syn_memory = { path = "../syn_memory" }
syn_director = { path = "../syn_director" }
syn_content = { path = "../syn_content" }
flutter_rust_bridge = "2"
