[package]
name = "syn_api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

# Note: Can't inherit workspace lints because FFI requires unsafe
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
unsafe_code = "allow"
missing_docs = "warn"

[lints.clippy]
all = "warn"

[dependencies]
syn_core = { path = "../syn_core" }
syn_sim = { path = "../syn_sim" }
syn_query = { path = "../syn_query" }
syn_memory = { path = "../syn_memory" }
syn_director = { path = "../syn_director" }
syn_content = { path = "../syn_content" }
syn_storylets = { path = "../syn_storylets" }
flutter_rust_bridge = "^2.0"
flutter_rust_bridge_macros = "^2.0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1"

[dev-dependencies]
flutter_rust_bridge_codegen = "^2.0"
tempfile = "3.8"

[features]
default = ["mimalloc"]
# High-performance allocator for production builds
mimalloc = ["syn_core/mimalloc-allocator"]
mmap = ["syn_storylets/mmap"]
