[package]
name = "syn_core"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[features]
default = []
# Enable mimalloc as the global allocator for improved performance
mimalloc-allocator = []

[dependencies]
serde = { workspace = true }
serde_json = "1.0"
rand = "0.8"
rand_chacha = "0.3"
rusqlite = { version = "0.30", features = ["bundled"] }
bincode = "1.3"
chrono = { workspace = true }

# Bleeding-edge stable
rustc-hash = { workspace = true }       # FxHashMap for hot paths
smallvec = { workspace = true }         # Stack vectors
compact_str = { workspace = true }      # Inline strings
thiserror = { workspace = true }        # Error handling
parking_lot = { workspace = true }      # Fast locks
mimalloc = { version = "0.1.48", features = ["secure"] }
lasso = { version = "0.7.3", features = ["multi-threaded", "serialize"] }
rkyv.workspace = true

[dev-dependencies]
tempfile = "3.10"
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "core_benchmarks"
harness = false
