[package]
name = "syn_director"
version = "0.1.0"
edition = "2021"

[dependencies]
syn_core = { path = "../syn_core" }
syn_query = { path = "../syn_query" }
syn_memory = { path = "../syn_memory" }
syn_sim = { path = "../syn_sim" }
syn_storage = { path = "../syn_storage" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
