[package]
name = "syn_storage"
version = "0.1.0"
edition = "2021"

# Note: Can't inherit workspace lints because DuckDB FFI requires unsafe
[lints.rust]
unsafe_code = "allow"
missing_docs = "warn"

[lints.clippy]
all = "warn"

[dependencies]
redb = "1.4"
duckdb = { version = "0.10", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
bincode = "1.3"
