[package]
name = "syn_storylets"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "storyletc"
path = "src/bin/storyletc.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
clap = { version = "4.4", features = ["derive"] }
memmap2 = { version = "0.9", optional = true }

[dev-dependencies]
tempfile = "3.8"

[features]
default = []
mmap = ["memmap2"]
